# ttyproc-svn

./: .in  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  pathdefs.h  ttyproc.c  ttyproc.h
.deps/: ttyproc.Plo
examples/: Makefile  testread.c
html/: annotated.html  config_8h-source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  pathdefs_8h-source.html  pathdefs_8h.html  structserial__entry.html  ttyproc_8c.html  ttyproc_8h-source.html  ttyproc_8h.html
kdevfiles/: tttyproc.kdevelop  tttyproc.kdevelop.pcs  tttyproc.kdevses
man/man3/: pathdefs.h.3  serial_entry.3  ttyproc.c.3  ttyproc.h.3
